# at-client

./: CMakeLists.txt  Makefile  README.md  at-client.code-workspace  main.c  project.yml  u_at_client.c  u_at_client.h  u_at_util.c  u_at_util.h  u_cx_at_client.c  u_cx_at_client.h  u_cx_at_util.c  u_ubxlib_main.c
inc/: u_cx_at_client.h  u_cx_at_config.h  u_cx_at_params.h  u_cx_at_util.h  u_cx_log.h
src/: u_cx_at_client.c  u_cx_at_params.c  u_cx_at_urc_queue.c  u_cx_at_util.c  u_cx_log.c  u_main_test.c  u_main_ubxlib.c
test/: test_u_cx_at_client.c  test_u_cx_at_params.c  test_u_cx_at_utils.c  u_main_test.c
ucx_api/: u_cx.c  u_cx_bluetooth.c  u_cx_bluetooth.h  u_cx_diagnostics.c  u_cx_diagnostics.h  u_cx_gatt_client.c  u_cx_gatt_client.h  u_cx_gatt_server.c  u_cx_gatt_server.h  u_cx_general.c  u_cx_general.h  u_cx_mqtt.c  u_cx_mqtt.h  u_cx_security.c  u_cx_security.h  u_cx_socket.c  u_cx_socket.h  u_cx_sps.c  u_cx_sps.h  u_cx_system.c  u_cx_system.h  u_cx_types.h  u_cx_urc.c  u_cx_urc.h  u_cx_wifi.c  u_cx_wifi.h
